name:            wai-handler-fastcgi
version:         4.0.0.0
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Gabriele Sales <gbrsales@gmail.com>
synopsis:        Wai handler to fastcgi
description:     API docs and the README are available at <http://www.stackage.org/package/wai-handler-fastcgi>.
category:        Web
stability:       stable
cabal-version:   >= 1.8
build-type:      Configure
extra-source-files: configure fastcgi.buildinfo.in README.md ChangeLog.md
homepage:        http://www.yesodweb.com/book/web-application-interface

library
    build-depends:   base              >= 4           && < 5
                   , wai               >= 3.0         && < 3.3
                   , wai-extra         >= 3.0         && < 3.2
                   , bytestring        >= 0.9.1.4     && < 0.13
    exposed-modules: Network.Wai.Handler.FastCGI
    ghc-options:     -Wall
    includes:        fcgiapp.h
    extra-libraries: fcgi
